--- a/themes/angelo/partials/navigation.htm
+++ b/themes/angelo/partials/navigation.htm
@@ -1,21 +1,23 @@
 <nav id="angelo-navigation" class="navbar">
-    <div class="logo">
-        <h4>
-            <a href="/">Angelo Lovato Art</a>
-        </h4>
-    </div>
+    <div class="container">
+        <div class="logo">
+            <h4>
+                <a href="/">Angelo Lovato Art</a>
+            </h4>
+        </div>
 
-    <ul class="nav-links">
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/prints">Prints</a></li>
-        <li><a href="/shows">Shows</a></li>
-    </ul>
+        <ul class="nav-links">
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/prints">Prints</a></li>
+            <li><a href="/shows">Shows</a></li>
+        </ul>
 
-    <div class="mobile-nav">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="mobile-nav">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
 </nav>
