--- a/themes/angelo/assets/css/angelo.css
+++ b/themes/angelo/assets/css/angelo.css
@@ -381,6 +381,7 @@ ul, ol, dd {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
+    font-family: 'Kite One', sans-serif;
     font-size: inherit;
     font-weight: inherit;
 }
