--- a/themes/angelo/partials/footer.htm
+++ b/themes/angelo/partials/footer.htm
@@ -1,26 +1,20 @@
-<section id="site-map">
-    <div class="container">
-        <p>Site Map PH</p>
-    </div>
-</section>
-
 <div id="footer">
     <div class="container">
-        <div id="footer-social" class="d-flex justify-content-center align-items-center mb-4">
-            <h4>Contact Us</h4>
+        <!--<div id="footer-social" class="d-flex justify-content-center align-items-center mb-4">-->
+            <!--<h4>Contact Us</h4>-->
 
-            <a class="d-inline-block" href="//twitter.com/angelolovatoart" target="_blank">
-                <span class="fab fa-twitter"></span>
-            </a>
+            <!--<a class="d-inline-block" href="//twitter.com/angelolovatoart" target="_blank">-->
+                <!--<span class="fab fa-twitter"></span>-->
+            <!--</a>-->
 
-            <a class="d-inline-block" href="//www.twitch.tv/angelolovatoart" target="_blank">
-                <span class="fab fa-twitch"></span>
-            </a>
+            <!--<a class="d-inline-block" href="//www.twitch.tv/angelolovatoart" target="_blank">-->
+                <!--<span class="fab fa-twitch"></span>-->
+            <!--</a>-->
 
-            <a class="d-inline-block" href="mailto:angelolovatoart@gmail.com" target="_blank">
-                <span class="fas fa-at"></span>
-            </a>
-        </div>
+            <!--<a class="d-inline-block" href="mailto:angelolovatoart@gmail.com" target="_blank">-->
+                <!--<span class="fas fa-at"></span>-->
+            <!--</a>-->
+        <!--</div>-->
 
         <div class="small text-center">
             <p class="copyright-text">
