--- a/themes/angelo/partials/navigation.htm
+++ b/themes/angelo/partials/navigation.htm
@@ -2,16 +2,17 @@
     <div class="container">
         <div class="logo">
             <h4>
-                <a href="/">Angelo Lovato Art</a>
+                <a href="/">Angelo Lovato</a>
             </h4>
+            <p>The King of Art</p>
         </div>
 
         <ul class="nav-links">
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/prints">Prints</a></li>
             <li><a href="/shows">Shows</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
 
         <div class="mobile-nav">
