--- a/themes/angelo/assets/css/angelo.css
+++ b/themes/angelo/assets/css/angelo.css
@@ -419,6 +419,10 @@ body {
     flex-grow: 1;
 }
 
+.text-center {
+    text-align: center;
+}
+
 .container {
     width: 100%;
     padding-right: 15px;
