--- a/plugins/cleanse/kingofart/components/about/default.htm
+++ b/plugins/cleanse/kingofart/components/about/default.htm
@@ -1,12 +1,14 @@
 <div class="container">
     <div class="about-flex-wrapper">
         <div class="about-text">
-            <h1>About Angelo</h1>
-            <p>Artist from Gallup, NM</p>
+            <h1>Angelo Lovato</h1>
+            <p>Angelo Lovato is an artist from Gallup, NM.</p>
+            <hr>
+            <p><em>"Pain is temporary, Art is Forever!" - Angelo Lovato</em></p>
         </div>
 
         <div class="about-photo">
-            <img src="/plugins/cleanse/kingofart/assets/images/about.jpg">
+            <img src="/plugins/cleanse/kingofart/assets/images/angelo-profile.jpg">
         </div>
     </div>
 </div>
