More touchups on the layout.

--- a/plugins/cleanse/kingofart/components/about/default.htm
+++ b/plugins/cleanse/kingofart/components/about/default.htm
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="about-flex-wrapper">
         <div class="about-text">
-            <h1>Angelo Lovato</h1>
+            <h1>About</h1>
             <p>Angelo Lovato is an artist from Gallup, NM.</p>
             <hr>
-            <p><em>"Pain is temporary, Art is Forever!" - Angelo Lovato</em></p>
+            <p><em>"Pain is temporary, Art is Forever!"</em></p>
         </div>
 
         <div class="about-photo">
