--- a/plugins/cleanse/kingofart/components/artprint/default.htm
+++ b/plugins/cleanse/kingofart/components/artprint/default.htm
@@ -1,6 +1,14 @@
 <div class="container">
-    <img src="{{ print.image ? print.image.getThumb(auto, 480) : default_image }}" alt="{{ print.excerpt }}"
-         class="card-img-top">
-    <h1>{{ print.title }}</h1>
-    <p>{{ print.excerpt }}</p>
+    <div class="about-flex-wrapper">
+        <div class="about-text">
+            <h1>{{ print.title }}</h1>
+            <p>by Angelo Lovato</p>
+            <hr>
+            <p><p>{{ print.excerpt }}</p></p>
+        </div>
+
+        <div class="about-photo">
+            <img src="{{ print.image ? print.image.getThumb(auto, 480) : default_image }}" alt="{{ print.excerpt }}">
+        </div>
+    </div>
 </div>
