--- a/themes/angelo/assets/css/angelo.css
+++ b/themes/angelo/assets/css/angelo.css
@@ -437,7 +437,6 @@ body {
     align-items: center;
     min-height: 8vh;
     margin-bottom: .5rem;
-    background-color: #502000;
 }
 
 #angelo-navigation > .container {
@@ -447,15 +446,13 @@ body {
 }
 
 .logo {
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
     letter-spacing: 5px;
 }
-
 .logo h4 {
     font-size: 1.25rem;
 }
-
 .logo p {
     font-size: .75rem;
 }
@@ -463,11 +460,11 @@ body {
 .nav-links {
     z-index: 1000000;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 40%;
 }
 .nav-links a {
-    color: #fff;
+    color: #000;
     font-size: .8rem;
     text-decoration: none;
     letter-spacing: 3px;
@@ -481,7 +478,7 @@ body {
     width: 25px;
     height: 3px;
     margin: .3rem;
-    background-color: rgba(225, 225, 225, 1);
+    background-color: #e1e1e1;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
@@ -552,14 +549,17 @@ body {
 .about-flex-wrapper {
     display: flex;
     flex-wrap: wrap;
+    background: #e1e1e1;
 }
 
+.about-text {
+    padding: 1rem;
+}
 .about-text h1 {
     margin: 1rem 0 1.25rem;
     font-size: 2rem;
     font-weight: bold;
 }
-
 .about-photo img {
     max-width: 100%;
 }
@@ -590,6 +590,10 @@ body {
 @media screen and (min-width: 768px) {
     .container {
         max-width: 720px;
+    }
+
+    .about-photo {
+        width: 50%;
     }
 }
 
@@ -626,16 +630,21 @@ body {
         overflow-x: hidden;
     }
 
+    .logo-link-subtext {
+        display: none;
+    }
+
     .nav-links {
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         align-items: center;
         position: absolute;
         top: 8vh;
         right: 0;
         height: 92vh;
-        width: 50%;
-        background-color: #502000;
+        width: 40%;
+        background-color: #e1e1e1;
         transform: translateX(100%);
         -webkit-transition: transform .5s ease-in;
         -moz-transition: transform .5s ease-in;
@@ -652,14 +661,12 @@ body {
         display: block;
     }
 
-    .copyright-text {
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 575.98px) {
     .about-flex-wrapper {
         flex-wrap: wrap-reverse;
+    }
+
+    .copyright-text {
+        text-align: center;
     }
 }
 
