--- a/themes/angelo/partials/navigation.htm
+++ b/themes/angelo/partials/navigation.htm
@@ -4,13 +4,11 @@
             <h4>
                 <a href="/">Angelo Lovato</a>
             </h4>
-            <p>The King of Art</p>
+            <p class="logo-link-subtext"><a href="/">The King of Art</a></p>
         </div>
 
         <ul class="nav-links">
             <li><a href="/gallery">Gallery</a></li>
-            <li><a href="/prints">Prints</a></li>
-            <li><a href="/shows">Shows</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
