--- a/themes/angelo/assets/css/angelo.css
+++ b/themes/angelo/assets/css/angelo.css
@@ -431,6 +431,86 @@ body {
     margin-left: auto;
 }
 
+button, input {
+    overflow: visible;
+}
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: .5rem;
+}
+
+textarea {
+    overflow: auto;
+    resize: vertical;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+textarea.form-control {
+    height: auto;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid
+    transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #481e1e;
+    border-color: #481e1e;
+}
+.btn-primary:hover {
+    color: #fff;
+    background-color: #cf5a5a;
+    border-color: #cf5a5a;
+}
+
 #angelo-navigation {
     display: flex;
     justify-content: space-around;
@@ -559,7 +639,8 @@ body {
 .about-text {
     padding: 1rem;
 }
-.about-text h1 {
+.about-text h1,
+.contact-text h1 {
     margin: 1rem 0 1.25rem;
     font-size: 2rem;
     font-weight: bold;
@@ -569,6 +650,11 @@ body {
 }
 .about-photo img {
     max-width: 100%;
+}
+
+.contact-text p {
+    margin-bottom: .75rem;
+    font-size: 1rem;
 }
 
 @media screen and (min-width: 576px) {
