--- a/plugins/cleanse/kingofart/components/contact/default.htm
+++ b/plugins/cleanse/kingofart/components/contact/default.htm
@@ -10,19 +10,20 @@
             {{ form_open({ request: 'onContact' }) }}
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" name="name" id="name" class="form-control">
+                    <input type="text" name="name" id="name" class="form-control" required>
                 </div>
 
                 <div class="form-group">
                     <label for="email">Email Address</label>
-                    <input type="email" name="email" id="email" class="form-control" aria-describedby="emailHelp">
+                    <input type="email" name="email" id="email" class="form-control"
+                           aria-describedby="emailHelp" required>
                     <small id="emailHelp" class="form-text text-muted">
                         We'll never share your email with anyone else.</small>
                 </div>
 
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea name="message" id="message" class="form-control" rows="3"></textarea>
+                    <textarea name="message" id="message" class="form-control" rows="3" required></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
