--- a/plugins/cleanse/kingofart/components/contact/default.htm
+++ b/plugins/cleanse/kingofart/components/contact/default.htm
@@ -26,8 +26,14 @@
                     <textarea name="message" id="message" class="form-control" rows="3" required></textarea>
                 </div>
 
+                <div class="g-recaptcha" data-sitekey="6LeqOs0UAAAAAASYr-qyhh17Q6h3pcdcvuI-Cpqs"></div>
+
                 <button type="submit" class="btn btn-primary">Submit</button>
             {{ form_close() }}
         </div>
     </div>
+
+    <p class="phone text-light">505.879.6966</p>
 </div>
+
+<script src="//www.google.com/recaptcha/api.js" async defer></script>
