--- a/plugins/cleanse/kingofart/components/contact/default.htm
+++ b/plugins/cleanse/kingofart/components/contact/default.htm
@@ -6,6 +6,7 @@
                 please complete the form below and we'll be in touch shortly.</p>
             <p><small id="SubmitHelp" class="form-text text-muted">
                 Note: All fields are required.</small></p>
+
             <hr>
             {{ form_open({ request: 'onContact' }) }}
                 <div class="form-group">
@@ -22,18 +23,21 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input type="text" name="subject" id="subject" class="form-control" required>
+                </div>
+
+                <div class="form-group">
                     <label for="message">Message</label>
                     <textarea name="message" id="message" class="form-control" rows="3" required></textarea>
                 </div>
 
-                <div class="g-recaptcha" data-sitekey="6LeqOs0UAAAAAASYr-qyhh17Q6h3pcdcvuI-Cpqs"></div>
+                <div class="g-recaptcha" data-sitekey="6LfyY9QUAAAAAEev11QbVXBcmn8bolRxX8XjqTVm"></div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
             {{ form_close() }}
         </div>
     </div>
-
-    <p class="phone text-light">505.879.6966</p>
 </div>
 
 <script src="//www.google.com/recaptcha/api.js" async defer></script>
